added quick settings functionality

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,19 @@
             android:name=".MainActivity"
             android:exported="true">
         </activity>
+
+        <service
+            android:name=".ClipboardService"
+            android:enabled="true"
+            android:exported="true"
+            android:label="Clean clipboard"
+            android:icon="@drawable/ic_round_attach_file_24"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
+            <intent-filter>
+                <action
+                    android:name="android.service.quicksettings.action.QS_TILE"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
